--- a/Main.html
+++ b/Main.html
@@ -1,9 +1,10 @@
 <html>
     <head>
-        <title>This is stupd :)</title>
+        <title>StuPD - The Students Pocket Dictionary</title>
+        <link href="./css/main.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <p>Welcome to stupd, here we'll tell you all about how to survive in this stupd place. </p>
+        <p>Welcome to StuPD, here we tell you what happens in this college and how you'll survive in here. </p>
     
         <h1>The Campus Map</h1>
         <p>
@@ -57,6 +58,6 @@
         <br><br>
         <p>There you have it! All the different clubs and councils in IITH. Yea its a lot to take in at once but try your best</p>
 
-        <h1></h1>
+        <button>para</button>
 
 </html>
