Added the top bar

--- a/Main.html
+++ b/Main.html
@@ -4,6 +4,12 @@
         <link href="./css/main.css" type="text/css" rel="stylesheet">
     </head>
     <body>
+        <div class="Top">
+            <a href="#cmap">Campus Map</a>
+            <a href="#cnc">Clubs and Councils</a>
+            <a href="#contact">Contact</a>
+          </div>
+        <div class="Main">
         <p>Welcome to StuPD, here we tell you what happens in this college and how you'll survive in here. </p>
     
         <h1>The Campus Map</h1>
@@ -59,5 +65,5 @@
         <p>There you have it! All the different clubs and councils in IITH. Yea its a lot to take in at once but try your best</p>
 
         <button>para</button>
-
+        </div>
 </html>
